fixed some tests (still around 50 failing) and enhanced dockerization